# gfm-rag

./: .env.example  .env.gfmrag.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPING.md  ENV_CONFIG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KG_ERROR_HANDLING_DEPLOYMENT_GUIDE.md  KG_ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  LANGCHAIN_OPTIMIZATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  test_env_config.py  validate_implementation.py
.github/workflows/: code-quality.yml  gf-pages.yml  gh-pages.yml  python-publish.yml
configs/: langchain_config.yaml  llama_server_config.yaml  production_config.yaml  vllm_config.yaml
deep_graphrag/: __init__.py  data_indexer.py  deep_graphrag_retriever.py  doc_rankers.py  losses.py  models.py  qa_prompt_builder.py  retrievers.py
deep_graphrag/datasets/: __init__.py  kg_dataset.py  qa_dataset.py
deep_graphrag/evaluation/: __init__.py  hotpot_qa_evaluator.py  musique_evaluator.py  retrieval_evaluator.py  two_wiki_qa_evaluator.py
deep_graphrag/kg_construction/: colbertv2_indexing.py  colbertv2_knn.py  (+10 more)
docs/: CHANGELOG.md  DEVELOPING.md  ENVIRONMENT_VARIABLES_GUIDE.md  ENVIRONMENT_VARIABLES_QUICKSTART.md  api.md  index.md  install.md  langchain_optimization_guide.md
gfmrag/: __init__.py  config_manager.py  config_validator.py  embedding_factory.py  enhanced_kg_models.py  error_handler.py  gfmrag_retriever.py  json_parser.py  kg_indexer.py  kg_monitoring.py  langchain_factory.py  losses.py  models.py  process_manager.py  prompt_builder.py  token_manager.py
scripts/: monitor_kg_system.py  stage1_data_index.sh  stage2_finetune.sh  stage2_pretrain.sh  stage3_qa_inference.sh  stage3_qa_ircot_inference.sh  validate_env_config.py
tests/: test_el_model.py  test_env_variables.py  test_error_handling_integration.py  test_kg_dataset.py  test_langchain_integration.py  test_ner_model.py  test_ner_model_parallel.py  test_openie_model.py  test_openie_model_parallel.py  test_stage2_dataset.py  test_utils.py
workflow/: stage1_index_dataset.py  stage1_kg_construction.py  stage1_process_construction.py  stage1_qa_construction.py  stage2_kg_pretrain.py  stage2_kg_pretraining.py  stage2_qa_finetune.py  stage3_qa_agent_inference.py  stage3_qa_inference.py  stage3_qa_ircot_inference.py
(+143 files in other folders)
